--- a/static/index.html
+++ b/static/index.html
@@ -7,7 +7,8 @@
       rel="stylesheet"
       href="https://code.getmdl.io/1.3.0/material.blue_grey-indigo.min.css"
     />
-    <script src="./main.js"></script>
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <script defer src="./main.js"></script>
     <link rel="stylesheet" href="./main.css" />
 
     <script src="./mdl/material.min.js"></script>
@@ -17,44 +18,17 @@
     />
   </head>
   <body>
-    <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+    <div id="app" class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
       <header class="mdl-layout__header">
         <div class="mdl-layout__header-row">
           <span class="mdl-layout-title">Time Entry Sender</span>
           <div class="mdl-layout-spacer"></div>
         </div>
       </header>
+
       <main class="mdl-layout__content">
         <form id="form" action="" onsubmit="sendData(); return false;">
-          <div>
-            <div
-              class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
-            >
-              <input
-                class="mdl-textfield__input"
-                type="text"
-                id="username"
-                required
-              />
-              <label class="mdl-textfield__label" for="username"
-                >username</label
-              >
-            </div>
-
-            <div
-              class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
-            >
-              <input
-                class="mdl-textfield__input"
-                type="password"
-                id="password"
-                required
-              />
-              <label class="mdl-textfield__label" for="password"
-                >password</label
-              >
-            </div>
-          </div>
+          <Authentication></Authentication>
           <div>
             <label for="start">Start date:</label>
             <input type="date" id="start" name="start" required />
@@ -75,5 +49,16 @@
         </div>
       </main>
     </div>
+
+    <!-- Import App -->
+    <script src="./main_vue.js"></script>
+
+    <!-- Import Components -->
+    <script src="./components/authentication.js"></script>
+
+    <!-- Mount App -->
+    <script>
+      app.mount("#app");
+    </script>
   </body>
 </html>
